--- a/Resizetizer.NT/Resizetizer.NT.targets
+++ b/Resizetizer.NT/Resizetizer.NT.targets
@@ -180,7 +180,6 @@
 
 		<DetectInvalidResourceOutputFilenamesTask
 			Items="@(SharedFont)"
-			ThrowsError="True"
 			ErrorMessage="One or more invalid file names were detected.  File names must be lowercase, start and end with a letter character, and contain only alphanumeric characters or underscores: &#13;&#10;">
 		</DetectInvalidResourceOutputFilenamesTask>
 
@@ -210,6 +209,11 @@
 		AfterTargets="$(ResizetizeAfterTargets)"
 		BeforeTargets="$(ResizetizeBeforeTargets)"
 		DependsOnTargets="$(ResizetizeDependsOnTargets)">
+
+		<DetectInvalidResourceOutputFilenamesTask
+			Items="@(SharedImage)"
+			ErrorMessage="One or more invalid file names were detected.  File names must be lowercase, start and end with a letter character, and contain only alphanumeric characters or underscores: &#13;&#10;">
+		</DetectInvalidResourceOutputFilenamesTask>
 
 		<!-- Where in obj/ to store these -->
 		<PropertyGroup>
